PDFileExplorer - Corrected Conflict dialog z-index to present on top of other dialogs.

--- a/PanoramicData.Blazor/wwwroot/css/main.scss
+++ b/PanoramicData.Blazor/wwwroot/css/main.scss
@@ -66,3 +66,14 @@
 .text-tiny {
 	font-size: 0.5rem;
 }
+
+.z-1000 {
+	z-index: 1000;
+}
+
+.z-1100 {
+	z-index: 1100;
+}
+.z-1200 {
+	z-index: 1200;
+}
